--- a/app/src/main/res/layout/item_list_all_pokemons.xml
+++ b/app/src/main/res/layout/item_list_all_pokemons.xml
@@ -13,6 +13,7 @@
         android:layout_height="100dp"
         android:src="@drawable/img_loading"
         android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -80,8 +81,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/lyt_images"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/img_item"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
