--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -25,18 +25,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_exclamation"
-        app:layout_constraintRight_toRightOf="parent"
         app:tint="@color/black"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/img_exit"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/txt_item_toolbar"
         />
+
+    <ImageView
+        android:id="@+id/img_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_baseline_exit"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:tint="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_item_toolbar"/>
 
 
     <EditText
         android:id="@+id/edt_item_toolbar"
         android:layout_width="match_parent"
         android:layout_height="36dp"
+        android:maxLines="1"
         android:drawableStart="@drawable/ic_baseline_search"
         style="@style/WhiteEditText"
         android:background="@drawable/shape_edit_text"
